# nps-radius-log-viewer

./: .antigravityignore  .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  build.rs  config.json  deny.toml  i18n.toml  osv-scanner.toml  radius_run.json  typos.toml
.agent/rules/: comment-code.md  lint.md
.github/workflows/: codeql.yml  deny.yml  nightly.yml  osv-scanner.yml  release.yml  rust-ci.yml  security-audit.yml  typos.yml  zizmor.yml
i18n/en/: radius_log_browser_rs.ftl
i18n/fr/: radius_log_browser_rs.ftl
patches/paste/: Cargo.toml  test.sh
patches/paste/paste-compat/: Cargo.toml  README.md  test.sh
patches/paste/paste-compat/src/: lib.rs
patches/paste/paste-compat/tests/: basic.rs  integrated.rs  test_expr.rs
patches/paste/pastey-test-suite/: Cargo.toml
patches/paste/pastey-test-suite/tests/: test_attr.rs  test_doc.rs  test_expr.rs  test_item.rs
patches/paste/pastey-test-suite/tests/ui/: case-warning.rs  case-warning.stable.stderr  env-empty.rs  env-non-string.rs  env-suffix.rs  env-unexpected.rs  extra-token-in-replace.rs  extra-token-in-replace.stderr  invalid-ident.rs  invalid-ident.stderr  invalid-replace-format.rs  invalid-replace-format.stderr  invalid-replace.rs  invalid-replace.stderr  missing-paren-on-env.rs  no-env-var.rs  no-ident-after-colon.rs  no-value-before-replace.rs  no-value-before-replace.stderr  raw-mode-wrong-position.nightly.stderr  raw-mode-wrong-position.rs  raw-mode-wrong-position.stable.stderr  unexpected-group.rs  unexpected-modifier.rs  unexpected-punct.rs  unsupported-literal.rs  unsupported-modifier.rs
src/: main.rs  reason_codes.json
