[package]
name = "pastey-test-suite"
version = "0.0.0"
authors = [
    "Aditya Kumar <git@adityais.dev>",
    "David Tolnay <dtolnay@gmail.com>",
]
edition = "2018"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
pastey = { path = "../" }
rustversion = "1.0"
trybuild = { version = "1", features = ["diff"] }
